# AIFirst-Deployment-Tier3

./: .gcloudignore  Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
